[gd_scene load_steps=25 format=3 uid="uid://chq5xwwd06qwc"]

[ext_resource type="Texture2D" uid="uid://bn4i7ivnj661j" path="res://Assets/Player/player_display.png" id="1_5kaq3"]
[ext_resource type="Texture2D" uid="uid://cmu7eh65yb4cr" path="res://Assets/Player/Pixel2_Healthbar_0002_pixel2_Border.png" id="2_iw08q"]
[ext_resource type="Script" uid="uid://cxbnu65dg12nf" path="res://Assets/Scripts/power_ups.gd" id="3_iw08q"]
[ext_resource type="Texture2D" uid="uid://c8j55ln6van5w" path="res://Assets/World/Card_Powerup.png" id="4_xm3wa"]
[ext_resource type="FontFile" uid="uid://dep1sjw7y40em" path="res://Assets/Fonts/BoldPixels1.4.ttf" id="5_5t6kp"]
[ext_resource type="Texture2D" uid="uid://dj1fpb6yak18m" path="res://Assets/World/Ranks_powerup.png" id="6_oc5i2"]
[ext_resource type="Script" uid="uid://ds0qdh8cqgck6" path="res://Assets/Scripts/labels_gui.gd" id="6_w41h6"]

[sub_resource type="Gradient" id="Gradient_5t6kp"]
colors = PackedColorArray(1, 1, 1, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_w41h6"]
gradient = SubResource("Gradient_5t6kp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oc5i2"]
texture = SubResource("GradientTexture1D_w41h6")

[sub_resource type="Gradient" id="Gradient_65erl"]
colors = PackedColorArray(0.999982, 0.259583, 0.205064, 1, 0.391064, 4.06103e-07, 1.44392e-07, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_mr3jv"]
gradient = SubResource("Gradient_65erl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g2xwr"]
texture = SubResource("GradientTexture1D_mr3jv")

[sub_resource type="Gradient" id="Gradient_iw08q"]
colors = PackedColorArray(4.9334e-07, 0, 0.300713, 1, 0, 0, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xm3wa"]
gradient = SubResource("Gradient_iw08q")
width = 128
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5t6kp"]
texture = SubResource("GradientTexture2D_xm3wa")

[sub_resource type="AtlasTexture" id="AtlasTexture_e6an7"]
atlas = ExtResource("1_5kaq3")
region = Rect2(0, 0, 65, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_iw08q"]
atlas = ExtResource("1_5kaq3")
region = Rect2(65, 0, 65, 68)

[sub_resource type="SpriteFrames" id="SpriteFrames_xm3wa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6an7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw08q")
}],
"loop": true,
"name": &"logo",
"speed": 2.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oc5i2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_65erl"]

[sub_resource type="Animation" id="Animation_e6an7"]
resource_name = "select_power"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GUI_BAR:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(773, -49), Vector2(436, 862)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Power_Ups:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -720), Vector2(0, -13)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GUI_BAR:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(3, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Labels GUI:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Power_Ups/Label:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 64)]
}

[sub_resource type="Animation" id="Animation_iw08q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GUI_BAR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(773, -49)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Power_Ups:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -771)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GUI_BAR:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Labels GUI:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Power_Ups/Label:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iw08q"]
_data = {
&"RESET": SubResource("Animation_iw08q"),
&"select_power": SubResource("Animation_e6an7")
}

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 54.0
offset_top = -27.0
offset_right = 54.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2

[node name="GUI_BAR" type="Node2D" parent="."]
position = Vector2(773, -49)
scale = Vector2(5, 5)

[node name="health_bar" type="ProgressBar" parent="GUI_BAR"]
offset_left = -104.0
offset_top = 30.0
offset_right = 2.0
offset_bottom = 37.0
scale = Vector2(0.999521, 1.11612)
theme_override_styles/background = SubResource("StyleBoxTexture_oc5i2")
theme_override_styles/fill = SubResource("StyleBoxTexture_g2xwr")
value = 100.0
show_percentage = false

[node name="stamina_bar" type="ProgressBar" parent="GUI_BAR"]
offset_left = -104.2
offset_top = 40.8
offset_right = 1.8
offset_bottom = 47.8
scale = Vector2(0.999521, 1.11612)
theme_override_styles/background = SubResource("StyleBoxTexture_oc5i2")
theme_override_styles/fill = SubResource("StyleBoxTexture_5t6kp")
value = 100.0
show_percentage = false

[node name="bar" type="Sprite2D" parent="GUI_BAR"]
position = Vector2(-28, -0.5)
texture = ExtResource("2_iw08q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="GUI_BAR"]
position = Vector2(-129.2, 52.4)
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_xm3wa")
animation = &"logo"
autoplay = "logo"
frame_progress = 0.0506607

[node name="Power_Ups" type="Node2D" parent="."]
position = Vector2(0, -771)
script = ExtResource("3_iw08q")

[node name="Card1" type="TextureRect" parent="Power_Ups"]
offset_left = 44.0
offset_top = 94.0
offset_right = 108.0
offset_bottom = 134.0
scale = Vector2(8, 8)
texture = ExtResource("4_xm3wa")

[node name="Power" type="Label" parent="Power_Ups/Card1"]
layout_mode = 0
offset_left = 3.5
offset_top = 2.125
offset_right = 43.5
offset_bottom = 25.125
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = ExtResource("5_5t6kp")
theme_override_font_sizes/font_size = 16
text = "power"

[node name="Label" type="Label" parent="Power_Ups/Card1"]
layout_mode = 0
offset_left = 4.125
offset_top = 13.25
offset_right = 137.125
offset_bottom = 36.25
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0.699653, 0.699653, 0.699653, 1)
theme_override_fonts/font = ExtResource("5_5t6kp")
text = "sdhfsdfjndsjsdffddf"

[node name="card_1_button" type="Button" parent="Power_Ups/Card1"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 40.0
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_oc5i2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_65erl")

[node name="Card2" type="TextureRect" parent="Power_Ups"]
offset_left = 656.0
offset_top = 94.0
offset_right = 720.0
offset_bottom = 134.0
scale = Vector2(8, 8)
texture = ExtResource("4_xm3wa")

[node name="Power" type="Label" parent="Power_Ups/Card2"]
layout_mode = 0
offset_left = 3.5
offset_top = 2.125
offset_right = 43.5
offset_bottom = 25.125
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = ExtResource("5_5t6kp")
theme_override_font_sizes/font_size = 16
text = "power"

[node name="Label" type="Label" parent="Power_Ups/Card2"]
layout_mode = 0
offset_left = 3.125
offset_top = 12.75
offset_right = 136.125
offset_bottom = 35.75
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0.699653, 0.699653, 0.699653, 1)
theme_override_fonts/font = ExtResource("5_5t6kp")
text = "sdhfsdfjndsjsdffddf"

[node name="card_2_button" type="Button" parent="Power_Ups/Card2"]
layout_mode = 0
offset_left = -0.25
offset_top = -0.5
offset_right = 63.75
offset_bottom = 39.5
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_oc5i2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_65erl")

[node name="Card3" type="TextureRect" parent="Power_Ups"]
offset_left = 1272.0
offset_top = 94.0
offset_right = 1336.0
offset_bottom = 134.0
scale = Vector2(8, 8)
texture = ExtResource("4_xm3wa")

[node name="Power" type="Label" parent="Power_Ups/Card3"]
layout_mode = 0
offset_left = 3.5
offset_top = 2.125
offset_right = 43.5
offset_bottom = 25.125
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = ExtResource("5_5t6kp")
theme_override_font_sizes/font_size = 16
text = "power"

[node name="Label" type="Label" parent="Power_Ups/Card3"]
layout_mode = 0
offset_left = 3.125
offset_top = 12.75
offset_right = 136.125
offset_bottom = 35.75
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0.699653, 0.699653, 0.699653, 1)
theme_override_fonts/font = ExtResource("5_5t6kp")
text = "sdhfsdfjndsjsdffddf"

[node name="card_3_button" type="Button" parent="Power_Ups/Card3"]
layout_mode = 0
offset_left = 0.5
offset_top = -0.5
offset_right = 64.5
offset_bottom = 39.5
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_oc5i2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_65erl")

[node name="Label" type="TextureRect" parent="Power_Ups"]
offset_left = 659.0
offset_top = 415.0
offset_right = 723.0
offset_bottom = 479.0
scale = Vector2(10, 10)
texture = ExtResource("6_oc5i2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iw08q")
}

[node name="Labels GUI" type="Node2D" parent="."]
position = Vector2(-61, 27)
script = ExtResource("6_w41h6")

[node name="Wave" type="Label" parent="Labels GUI"]
offset_left = 49.0
offset_top = 956.0
offset_right = 481.0
offset_bottom = 1044.0
theme_override_fonts/font = ExtResource("5_5t6kp")
theme_override_font_sizes/font_size = 100
text = "Wave 1/10"

[node name="Enimies Left" type="Label" parent="Labels GUI"]
offset_left = 1230.0
offset_top = 37.0
offset_right = 1887.0
offset_bottom = 125.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_5t6kp")
theme_override_font_sizes/font_size = 100
text = "Enemies Left: 1"

[connection signal="pressed" from="Power_Ups/Card3/card_3_button" to="Power_Ups" method="_on_card_3_button_pressed"]
